<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar">
        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Asset Tag"
                android:id="@+id/assetTagText" />

            <EditText
                android:id="@+id/assetTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Type Asset Tag" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Asset Type"
                android:id="@+id/assetTypeSpinner" />

            <Spinner
                android:id="@+id/assetType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/selectAssetType"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Brand"
                android:id="@+id/assetBrandSpinner" />

            <Spinner
                android:id="@+id/assetBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/selectAssetBrand"
                android:spinnerMode="dialog" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Model"
                android:id="@+id/assetModelSpinner" />

            <Spinner
                android:id="@+id/assetModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:prompt="@string/selectAssetModel"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type or Scan S/N"
                android:id="@+id/assetSNText" />

            <EditText
                android:id="@+id/barcodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Insert or Scan S/N" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SCAN"
                android:id="@+id/scanButton" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Property"
                android:id="@+id/assetPropertySpinner" />

            <Spinner
                android:id="@+id/assetProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Location"
                android:id="@+id/assetLocationSpinner" />

            <Spinner
                android:id="@+id/assetLocationType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/assetFloor"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Type Floor No"
                android:inputType="text" />

            <EditText
                android:id="@+id/assetRoom"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Type Room No"
                android:inputType="text" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Owner"
                android:id="@+id/assetOwnerSpinner" />

            <Spinner
                android:id="@+id/assetOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="SAVE"
            android:text="SAVE" />

    </LinearLayout>


</LinearLayout>