<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar">
        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Asset Tag"
                android:id="@+id/assetTagText" />

            <EditText
                android:id="@+id/assetTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Asset Tag" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Asset Type"
                android:id="@+id/assetTypeSpinner" />

            <EditText
                android:id="@+id/assetType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/AssetType"
                android:hint="Asset Type" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brand"
                android:id="@+id/assetBrandSpinner" />

            <EditText
                android:id="@+id/assetBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/AssetBrand"
                android:hint="Brand" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Model"
                android:id="@+id/assetModelSpinner" />

            <EditText
                android:id="@+id/assetModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/AssetModel"
                android:hint="Model" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type or Scan S/N"
                android:id="@+id/assetSNText" />

            <EditText
                android:id="@+id/barcodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Insert or Scan S/N" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SCAN"
                android:id="@+id/scanButton" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Property"
                android:id="@+id/assetPropertySpinner" />

            <EditText
                android:id="@+id/assetProperty"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:hint="Property"
                android:layout_weight="1" />

            <Button
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:text="CHANGE"
                android:id="@+id/propertyButton" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:id="@+id/assetLocationSpinner" />

            <EditText
                android:id="@+id/assetLocationType"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Location" />

            <Button
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:text="CHANGE"
                android:id="@+id/locationButton" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/assetFloor"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Floor No"
                android:inputType="text" />

            <EditText
                android:id="@+id/assetRoom"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Room No"
                android:inputType="text" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Owner"
                android:id="@+id/assetOwnerSpinner" />

            <EditText
                android:id="@+id/assetOwnerName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Owner Name" />

            <Button
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:text="CHANGE"
                android:id="@+id/ownerButton" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="SEARCH"
            android:text="SEARCH"
            android:onClick="onClick"/>

            <Button
                android:id="@+id/buttonTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="TRANSFER"
                android:text="TRANSFER"
                android:onClick="onClick"/>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>